# rust-viterbo

./: .gitattributes  .gitignore  404.html  AGENTS.future.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  print.html  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  searchindex.js  toc.html  toc.js
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
configs/atlas/: full.json  large.json  small.json  test.json
configs/bench/: docs_local.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  provenance.rs
crates/safe-exec/: Cargo.toml
crates/safe-exec/src/: main.rs
crates/viterbo/: Cargo.toml
crates/viterbo-py/: Cargo.toml
crates/viterbo-py/src/: capacity.rs  common.rs  geom.rs  lib.rs  rand4.rs
crates/viterbo/benches/: gen_bench.rs  oe4_bench.rs  poly2_bench.rs  volume4_bench.rs
crates/viterbo/examples/: realistic_polys.rs  systolic_ratio.rs
crates/viterbo/proptest-regressions/rand4/: mod.txt
crates/viterbo/src/: api.rs  geometry.rs  lib.rs  oriented_edge.rs  poly2.rs  poly4.rs  spec.md
crates/viterbo/src/geom2/: mod.rs  ordered.rs  rand.rs  solvers.rs  tests.rs  types.rs  util.rs
crates/viterbo/src/geom4/: cfg.rs  convert.rs  faces.rs  maps.rs  mod.rs  special.rs  tests_special.rs  types.rs  util.rs  volume.rs
crates/viterbo/src/oriented_edge/: build.rs  dfs.rs  mod.rs  tests.rs  types.rs
crates/viterbo/src/rand4/: mod.rs
data/atlas/: full.parquet  full.parquet.run.json  test.parquet  test.parquet.run.json
data/bench/: .rustc_info.json
data/target_seqD/: .rustc_info.json
data/target_seqE/: .rustc_info.json
data/target_seqF/: .rustc_info.json
docs/: book.toml
docs/assets/: demo.provenance.json  provenance.json
docs/assets/atlas/: test_preview.json
docs/assets/bench/: 20251107T171926Z_poly2.csv  20251107T171926Z_poly2.csv.run.json  20251107T171926Z_poly2.md  20251107T172004Z_poly2.csv  20251107T172004Z_poly2.csv.run.json  20251107T172004Z_poly2.md  20251107T175857Z_poly2.csv  20251107T175857Z_poly2.csv.run.json  20251107T175857Z_poly2.md  20251107T180740Z_poly2.csv  20251107T180740Z_poly2.csv.run.json  20251107T180740Z_poly2.md  20251107T192551Z_poly2.csv  20251107T192551Z_poly2.csv.run.json  20251107T192551Z_poly2.md  20251107T214815Z_poly2.csv  20251107T214815Z_poly2.csv.run.json  20251107T230118Z_poly2.csv  20251107T230118Z_poly2.csv.run.json  20251107T230118Z_poly2.md  20251107T230149Z_poly2.csv  20251107T230149Z_poly2.csv.run.json  20251107T230149Z_poly2.md  20251108T084708Z_poly2.csv  20251108T084708Z_poly2.csv.run.json  20251108T084708Z_poly2.md  20251108T163227Z_gen2d.csv  20251108T163227Z_gen2d.csv.run.json  20251108T163227Z_gen2d.md  20251108T163227Z_gen4d.csv  20251108T163227Z_gen4d.csv.run.json  20251108T163227Z_gen4d.md  20251108T163227Z_poly2.csv  20251108T163227Z_poly2.csv.run.json  20251108T163227Z_poly2.md  (+82 more)
docs/src/: SUMMARY.md  index.md
lean/: .gitignore  README.md  SympCertificates.lean  SympPolytopes.lean  lake-manifest.json  lakefile.lean
lean/SympCertificates/: Basic.lean
lean/SympPolytopes/: Basic.lean  OrientedEdge.lean
lean/Tests/: Main.lean
lean/examples/: Walkthrough.lean
meta/: benchmarks.html  git-history-cleanup.html  oriented-edge-charts-and-rotation.html  overview.html  protocol-2025-11-04.html
scripts/: agentx-hook-provision.sh  agentx.py  agentx.sh  agentx_runner.py  background.sh  bash-setup.sh  check_refs.sh  checks.sh  ci.sh  group-timeout.sh  interrogate_agent.prompt  issue-list.sh  kill_orphans.sh  lean-lint.sh  lean-setup.sh  lean-test.sh  merge-worktree.sh  paper-download.sh  provision-worktree-hook-after.sh  provision-worktree.sh  publish.sh  python-lint-type-test.sh  python-setup.sh  reproduce.sh  rust-bench-quick.sh  rust-bench.sh  rust-build.sh  rust-check.sh  rust-clippy.sh  rust-fmt.sh  rust-lint-test.sh  rust-setup.sh  rust-test.sh  safe.sh  subagent.sh  vk-setup.sh  vk.sh
src/viterbo/: __init__.py  _native.py  provenance.py  viterbo_native.abi3.so.run.json
tests/e2e/: test_atlas_build.py
tests/smoke/: test_imports.py  test_native.py
thesis/: Ekeland-Hofer-Zehnder-Capacity.html  capacity-algorithm-linear-program.html  capacity-algorithm-oriented-edge-graph.html  geom2d_polytopes.html  geom4d_polytopes.html  geom4d_volume.html  overview.html  random-polytopes.html  status-math.html  visualization.html
(+1227 files in other folders)
