[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "viterbo"
version = "0.1.0"
description = "Python-first orchestration for Viterbo pipelines, with Rust hotspots."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "polars>=1.6",
  "pyarrow>=15",
]
authors = [{ name = "Project Viterbo", email = "n/a@example.com" }]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pyright>=1.1.380",
  "ruff>=0.6",
  "maturin>=1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/viterbo"]

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["data", "docs/book", "**/.venv", "**/__pycache__"]
reportMissingTypeStubs = "none"
reportMissingImports = "none"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["F"]
ignore = ["F401"]

[tool.pytest.ini_options]
markers = [
  "e2e: end-to-end tests (select and run on demand)",
]
addopts = "-q"
