[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.43", features = ["lazy", "parquet", "csv"] }
viterbo = { path = "../viterbo" }

[dev-dependencies]
tempfile = "3"
