[package]
name = "viterbo"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.8", features = ["std", "std_rng"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poly2_bench"
harness = false

[[bench]]
name = "volume4_bench"
harness = false

[[bench]]
name = "oe4_bench"
harness = false
